# ctp-python

./: .env.example  .gitignore  404.html  README.md  README_EN.md  check_fronts.py  check_hongyuan.py  clear_pip_cache.py  ctp.i  index.html  mkdocs.yml  netlify.toml  pyproject.toml  requirements-dev.txt  run_tests.py  setup.py  sitemap.xml
.github/workflows/: build_wheels.yml  docs.yml  publish.yml
_bmad/_config/: files-manifest.csv  manifest.yaml  workflow-manifest.csv
_bmad/_config/ides/: claude-code.yaml  codex.yaml  cursor.yaml  windsurf.yaml
_bmad/_memory/: config.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
_bmad/gds/: config.yaml
_bmad/tea/: config.yaml
api-reference-md/: index.html
api-reference-trader/: index.html
architecture/: index.html
ctp/: client.py  proxy.py
development-guide/: index.html
docs/: api-reference-md.md  api-reference-trader.md  architecture.md  development-guide.md  index.md  project-overview.md  project-scan-report.json  source-tree-analysis.md  tutorial.md
examples/: README.md  md_demo.py  order_demo.py  tick_recorder.py  trader_demo.py
project-overview/: index.html
search/: search_index.json
source-tree-analysis/: index.html
tests/: conftest.py  test_basic.py  test_md.py  test_trader.py
tutorial/: index.html
